// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`endGAM closes meeting if requested 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": undefined,
      "type": "END_MEETING",
    },
  ],
]
`;

exports[`endGAM closes meeting if requested 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": undefined,
      "type": "END_MEETING",
    },
  ],
]
`;

exports[`toggleRegistration emits a toggle action that closes registration 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "pin": 3141592653,
        "registrationOpen": false,
        "status": "open",
        "title": "Testfors",
      },
      "type": "TOGGLED_REGISTRATION_STATE",
    },
  ],
]
`;

exports[`toggleRegistration emits a toggle action that closes registration 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "registrationOpen": false,
        "status": "open",
        "title": "Testfors",
      },
      "type": "TOGGLED_REGISTRATION_STATE",
    },
  ],
]
`;

exports[`toggleRegistration emits a toggle action that closes registration 3`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "pin": 3141592653,
        "registrationOpen": false,
        "status": "open",
        "title": "Testfors",
      },
      "type": "TOGGLED_REGISTRATION_STATE",
    },
  ],
]
`;

exports[`toggleRegistration emits a toggle action that opens registration 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "pin": 3141592653,
        "registrationOpen": true,
        "status": "open",
        "title": "Testfors",
      },
      "type": "TOGGLED_REGISTRATION_STATE",
    },
  ],
]
`;

exports[`toggleRegistration emits a toggle action that opens registration 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "registrationOpen": true,
        "status": "open",
        "title": "Testfors",
      },
      "type": "TOGGLED_REGISTRATION_STATE",
    },
  ],
]
`;

exports[`toggleRegistration emits a toggle action that opens registration 3`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "pin": 3141592653,
        "registrationOpen": true,
        "status": "open",
        "title": "Testfors",
      },
      "type": "TOGGLED_REGISTRATION_STATE",
    },
  ],
]
`;

exports[`toggleRegistration responds with an error if something wrong happens 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Noe gikk galt under oppdatering av registreringsstatus.",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`toggleRegistration responds with an error if something wrong happens 2`] = `Array []`;
